Spajanje algoritma za detekciju reci sa ostatkom koda, dopuna README.md fajla

--- a/projekat.ipynb
+++ b/projekat.ipynb
@@ -11,7 +11,10 @@
     "import csv\n",
     "import cv2\n",
     "from skimage.feature import hog\n",
-    "from sklearn.externals import joblib"
+    "from sklearn.externals import joblib\n",
+    "import easyocr\n",
+    "import numpy as np\n",
+    "import pandas as pandas"
    ]
   },
   {
@@ -103,6 +106,57 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "96ed5860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ocr pomocu biblioteke\n",
+    "\n",
+    "def ocr(image):\n",
+    "    reader = easyocr.Reader(['rs_latin'])\n",
+    "    list_of_words = []\n",
+    "\n",
+    "    #horizontalne knjige\n",
+    "    output = reader.readtext(image) #[lista_koordinata, rijec_koja_je_detektovana, koliko_je_siguran_da_je_to_ta_rijec]\n",
+    "    for o in output:\n",
+    "        if o[2]>0.5:\n",
+    "            if(len(o[1]) > 1):\n",
+    "                list_of_words.append(o[1])\n",
+    "\n",
+    "    #odradi rotaciju za 90 stepeni da detektuje ukoliko ima vertikalnih knjiga\n",
+    "    rot_image = np.rot90(image)\n",
+    "    output = reader.readtext(rot_image) \n",
+    "    for o in output:\n",
+    "        if o[2]>0.5:\n",
+    "            if(len(o[1]) > 1):\n",
+    "                list_of_words.append(o[1])\n",
+    "        \n",
+    "    return list_of_words\n",
+    "\n",
+    "def prepare_ocr_row(row):\n",
+    "    final_list = []\n",
+    "    for elem in row:\n",
+    "        mini_list = elem.split(\" \")\n",
+    "        for word in mini_list:\n",
+    "            final_list.append(word.upper())\n",
+    "    return final_list\n",
+    "\n",
+    "def calculate_result(ocr_set, csv_list):\n",
+    "    sum_of_all = 0\n",
+    "    num_of_words = 0\n",
+    "    ocr_list = prepare_ocr_row(ocr_set)\n",
+    "\n",
+    "    num_of_words = num_of_words + len(csv_list)\n",
+    "\n",
+    "    for word in csv_list:\n",
+    "        if word in ocr_list:\n",
+    "            sum_of_all = sum_of_all + 1\n",
+    "    return (sum_of_all/num_of_words) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ddf1059e",
    "metadata": {
     "scrolled": true
@@ -133,9 +187,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LibLinear]\n",
+      "[LibLinear]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Detekcija je zavrsena\n",
-      "Tacnost resenja: 88.67%\n"
+      "Tacnost resenja: 88.67%\n",
+      "\n",
+      "---------------------------------------------------------------------------------------------\n",
+      "\n",
+      "Detekcija reci na slikama je u toku...\n",
+      "Detekcija moze potrajati manje od 1 sata\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Detekcija je zavrsena\n",
+      "Tacnost resenja: 81.2%\n"
      ]
     }
    ],
@@ -155,26 +335,28 @@
     "print(\"\\nDetekcija je zavrsena\")\n",
     "print(\"Tacnost resenja: \" + str(accuracy) +\"%\")\n",
     "\n",
-    "\"\"\"\n",
-    "    file_info                                                -> [[0, []], [2, ['rec', 'rec', 'rec']], ...]\n",
-    "    \n",
-    "    knjiga_info_7 = file_info[6]                             -> [2, ['rec', 'rec', 'rec']]                -> ima knjiga\n",
-    "    sve_reci_za_ocr = file_info[6][1] = knjiga_info_7[1]     -> ['rec', 'rec', 'rec']\n",
-    "    knjiga_info_5 = file_info[4]                             -> [0, []]                                   -> nema knjiga\n",
-    "    \n",
-    "    --------------------------------------------------------------------------------------------------------------------\n",
-    "    result                                                   -> [0, 1, 0, 1, 1, ...]\n",
-    "    --------------------------------------------------------------------------------------------------------------------\n",
-    "    uslov za ocr:\n",
-    "        => result[ind] == 1 and file_info[ind][0] != 0\n",
-    "    \n",
-    "\"\"\""
+    "print(\"\\n---------------------------------------------------------------------------------------------\")\n",
+    "\n",
+    "print(\"\\nDetekcija reci na slikama je u toku...\")\n",
+    "print(\"Detekcija moze potrajati oko 45 minuta\")\n",
+    "sum_for_image = 0\n",
+    "image_numer = 0\n",
+    "ind_img = 0\n",
+    "for img in test_set:\n",
+    "    if file_info[ind_img][0] != 0 and resault[ind_img] == 1:\n",
+    "        image_numer += 1\n",
+    "        found_words = ocr(img)\n",
+    "        sum_for_image += calculate_result(found_words, file_info[ind_img][1])\n",
+    "    ind_img += 1\n",
+    "final_avg = round(sum_for_image/image_numer * 100, 2)\n",
+    "print(\"\\nDetekcija je zavrsena\")\n",
+    "print(\"Tacnost resenja: \" + str(final_avg) +\"%\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ed5860",
+   "id": "45f5c85e",
    "metadata": {},
    "outputs": [],
    "source": []
